# g1chat

./: .gitignore  README.md  pyproject.toml
assets/: hooks.json  system_prompt_en.txt  system_prompt_zh.txt
bugs/: cursor_audio_playback_issue_on_developm.md  cursor_audio_playback_issue_on_developm2.md  cursor_audio_playback_issue_on_developm3.md  cursor_sound_playback_issue_in_g1chat_r.md
g1chat/: g1chat.py
g1chat/audio/: __init__.py  asr_tts.py  audio_device.py  misc.py  volcengine_doubao_asr.py  volcengine_doubao_tts.py
g1chat/tools/: 08_test_asr_tts.py  __init__.py  audio_device_list.py  check_audio_device.py  convert_mp3_wav.py  doubao_asr.py  doubao_asrtts_asr.py  doubao_asrtts_tts.py  doubao_llm.py  doubao_tts.py  g1.py  play_audio.py  realtime_audio_loopback.py  record_audio.py  test_asr.py  wav_info.py
g1chat/utils/: __init__.py  check_audio_device.py  env.py  logging.py  websockets_compat.py
tools/: audio_device_list.py
