[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "g1chat"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "loguru>=0.7.3",
    "numpy>=1.24.4",
    "openai>=2.2.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "websockets>=13.1",
]

[project.scripts]
g1chat-audio-device-list = "g1chat.tools.audio_device_list:main"


[tool.setuptools]
packages = { find = { where = ["."], include = ["g1chat", "g1chat.*"] } }

[tool.setuptools.dynamic]
version = { attr = "g1chat.__version__" }

[tool.setuptools.package-data]
g1chat = ["../assets/**/*"]

